Newer index page
Removed the folder "index/" from image url

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
  		  	 	font-size:  24px; text-align: center; margin: 40px; color: #009900
  		  	 }
  		  	 #boxA{
- 		  	 	background-image: url(images/coyote.jpg)
+ 		  	 	background-image: url(coyote.jpg)
  		  	 }
  		  	 #boxB{
- 		  	 	background-image: url(images/black_bear.jpg)
+ 		  	 	background-image: url(black_bear.jpg)
  		  	 }
  		  	 #boxC{
- 		  	 	background-image: url(images/grass.jpg)
+ 		  	 	background-image: url(grass.jpg)
  		  	 }
  		  	 #boxD{
- 		  	 	background-image: url(images/rabbits.jpg)
+ 		  	 	background-image: url(rabbits.jpg)
  		  	 }
  		  	 #boxE{
- 		  	 	background-image: url(images/sun2.jpg) 
+ 		  	 	background-image: url(sun2.jpg) 
  		  	 }
  		  	 #btn1{
  		  	 	width: 225px; height: 50px; margin:10px; margin-left: 480px; font-size: 24px
