--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  		  	 	background-image: url(rabbits.jpg)
  		  	 }
  		  	 #boxE{
- 		  	 	background-image: url(sun2.jpg) 
+ 		  	 	background-image: url(https://github.com/RickNTruckee/RickNTruckee.github.io/blob/master/Images/sun2.jpg) 
  		  	 }
  		  	 #btn1{
  		  	 	width: 225px; height: 50px; margin:10px; margin-left: 480px; font-size: 24px
