Try SRC for coyote image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  		  	 	font-size:  24px; text-align: center; margin: 40px; color: #009900
  		  	 }
  		  	 #boxA{
- 		  	 	background-image: url(coyote.jpg)
+ 		  	 	background-image: src(coyote.jpg)
  		  	 }
  		  	 #boxB{
  		  	 	background-image: url(black_bear.jpg)
