Remove "image"directory for bee.gif

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  		  	  		<p>
  		  	  			
  		  	  		<button id="btn1" type="button" onclick="myScore()">Check Score</button>
- 		  	  		<div id="box7"><img src="images/flybee.gif" id="bee"></div>;
+ 		  	  		<div id="box7"><img src="flybee.gif" id="bee"></div>;
 					</p>
 					
  		  	  	<script>
