add quotes to image name

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
  		  	 	font-size:  24px; text-align: center; margin: 40px; color: #009900
  		  	 }
  		  	 #boxA{
- 		  	 	background-image: src(coyote.jpg)
+ 		  	 	background-image: src("coyote.jpg")
  		  	 }
  		  	 #boxB{
- 		  	 	background-image: url(black_bear.jpg)
+ 		  	 	background-image: url("black_bear.jpg")
  		  	 }
  		  	 #boxC{
  		  	 	background-image: url(grass.jpg)
@@ -22,7 +22,7 @@
  		  	 	background-image: url(rabbits.jpg)
  		  	 }
  		  	 #boxE{
- 		  	 	background-image: url(https://github.com/RickNTruckee/RickNTruckee.github.io/blob/master/Images/sun2.jpg) 
+ 		  	 	background-image: url("https://github.com/RickNTruckee/RickNTruckee.github.io/blob/master/Images/sun2.jpg") 
  		  	 }
  		  	 #btn1{
  		  	 	width: 225px; height: 50px; margin:10px; margin-left: 480px; font-size: 24px
