Added url from image source to flybee.gif

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  		  	  		<p>
  		  	  			
  		  	  		<button id="btn1" type="button" onclick="myScore()">Check Score</button>
- 		  	  		<div id="box7"><img src="flybee.gif" id="bee"></div>;
+ 		  	  		<div id="box7"><img src="http://rickntruckee.github.io/flybee.gif" id="bee"></div>;
 					</p>
 					
  		  	  	<script>
@@ -132,6 +132,7 @@
 						}
 						</script>
 						<!--//var Ans1 = CheckBox1.innerHTML.contains("boxE");
+							http://rickntruckee.github.io/flybee.gif
 						//var NewID = CheckID.getElementsByTagName("mover");
 						//console.log(NewID);
 						//var OtherID = document.getElementById("boxE");
