added / before folder name "images"

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  		  	  		<p>
  		  	  			
  		  	  		<button id="btn1" type="button" onclick="myScore()">Check Score</button>
- 		  	  		<div id="box7"><img src="http://rickntruckee.github.io/rickntruckee.github.io/sun.jpg" id="bee"></div>;
+ 		  	  		<div id="box7"><img src="/Images/sun.jpg"></div>;
 					</p>
 					
  		  	  	<script>
@@ -133,6 +133,7 @@
 						</script>
 						<!--//var Ans1 = CheckBox1.innerHTML.contains("boxE");
 							http://rickntruckee.github.io/flybee.gif
+							"http://rickntruckee.github.io/rickntruckee.github.io/sun.jpg" id="bee"
 						//var NewID = CheckID.getElementsByTagName("mover");
 						//console.log(NewID);
 						//var OtherID = document.getElementById("boxE");
