added / front of image folder for grass.jpg

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  		  	 	background-image: url("black_bear.jpg")
  		  	 }
  		  	 #boxC{
- 		  	 	background-image: url(grass.jpg)
+ 		  	 	background-image: url(/images/grass.jpg)
  		  	 }
  		  	 #boxD{
  		  	 	background-image: url(rabbits.jpg)
