changed to capital I and added quotes

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
  		  	 	background-image: url("black_bear.jpg")
  		  	 }
  		  	 #boxC{
- 		  	 	background-image: url(/images/grass.jpg)
+ 		  	 	background-image: url(/Images/grass.jpg)
  		  	 }
  		  	 #boxD{
- 		  	 	background-image: url(rabbits.jpg)
+ 		  	 	background-image: url("/Images/rabbits.jpg")
  		  	 }
  		  	 #boxE{
  		  	 	background-image: url("https://github.com/RickNTruckee/RickNTruckee.github.io/blob/master/Images/sun2.jpg") 
