--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  		  	 	font-size:  24px; text-align: center; margin: 40px; color: #009900
  		  	 }
  		  	 #boxA{
- 		  	 	background-image: src(/Images/coyote.jpg")
+ 		  	 	background-image: url(/Images/coyote.jpg)
  		  	 }
  		  	 #boxB{
  		  	 	background-image: url(/Images/black_bear.jpg)
@@ -22,7 +22,7 @@
  		  	 	background-image: url(/Images/rabbits.jpg)
  		  	 }
  		  	 #boxE{
- 		  	 	background-image: url(/Images/sun2.jpg") 
+ 		  	 	background-image: url(/Images/sun2.jpg) 
  		  	 }
  		  	 #btn1{
  		  	 	width: 225px; height: 50px; margin:10px; margin-left: 480px; font-size: 24px
@@ -32,7 +32,7 @@
  		  	 } 
  		  	 #box7{
  		  	 	width: 250px; height: 300px; border-width: 10px dotted #333333; float: right;
- 		  	 	margin-right: 150px; margin-bottom: 400px; margin-top: 1px; padding-top: 1px; visibility: "hidden"
+ 		  	 	margin-right: 150px; margin-bottom: 400px; margin-top: 1px; padding-top: 1px; visibility: hidden;
  		  		
  		  	 }
  		 </style>
