Needed capital letters on some image names!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  		  	 	font-size:  24px; text-align: center; margin: 40px; color: #009900
  		  	 }
  		  	 #boxA{
- 		  	 	background-image: url(/Images/coyote.jpg)
+ 		  	 	background-image: url(/Images/Coyote.jpg)
  		  	 }
  		  	 #boxB{
  		  	 	background-image: url(/Images/black_bear.jpg)
@@ -19,7 +19,7 @@
  		  	 	background-image: url(/Images/grass.jpg)
  		  	 }
  		  	 #boxD{
- 		  	 	background-image: url(/Images/rabbits.jpg)
+ 		  	 	background-image: url(/Images/Rabbits.jpg)
  		  	 }
  		  	 #boxE{
  		  	 	background-image: url(/Images/sun2.jpg) 
@@ -73,7 +73,7 @@
  		  	  		<p>
  		  	  			
  		  	  		<button id="btn1" type="button" onclick="myScore()">Check Score</button>
- 		  	  		<div id="box7"><img src="/Images/sun.jpg"></div>;
+ 		  	  		<div id="box7"><img src="/Images/flybee.gif"></div>;
 					</p>
 					
  		  	  	<script>
