--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  		  	 	font-size:  24px; text-align: center; margin: 40px; color: #009900
  		  	 }
  		  	 #boxA{
- 		  	 	background-image: url(/Images/Coyote.jpg)
+ 		  	 	background-image: url(/Images/Coyote.jpg); margin-left: 60px;
  		  	 }
  		  	 #boxB{
  		  	 	background-image: url(/Images/black_bear.jpg)
