give all pics margin of 20px

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
  	<head>
  		 <style type="text/css">
  		  .mover {
- 		  	 width:200px; height:190px; line-height:4em; margin:10px; padding:5px; float:left; 
+ 		  	 width:200px; height:190px; line-height:4em; margin:20px; padding:5px; float:left; 
  		  	 border:1px dotted #333333; text-align:center;  
  		  	 } 
  		  	 #box0{
  		  	 	font-size:  24px; text-align: center; margin: 40px; color: #009900
  		  	 }
  		  	 #boxA{
- 		  	 	background-image: url(/Images/Coyote.jpg); margin-left: 100px;
+ 		  	 	background-image: url(/Images/Coyote.jpg); 
  		  	 }
  		  	 #boxB{
  		  	 	background-image: url(/Images/black_bear.jpg)
@@ -25,7 +25,7 @@
  		  	 	background-image: url(/Images/sun2.jpg) 
  		  	 }
  		  	 #btn1{
- 		  	 	width: 225px; height: 50px; margin:10px; margin-left: 480px; font-size: 24px
+ 		  	 	width: 225px; height: 50px; margin:10px; margin-left: 540px; font-size: 24px
  		  	 }
  		  	 #box6{
  		  	 	width: 1300px; height: 30px; border-style: none; margin-left: 480px margin-top 600px; float:right;
