--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				}
  		  	  	</script> 
  		  	  	</head> 
- 		  	  	<body> <div id="box0"><em>Drag and drop the pictures in the correct order to show how energy moves through a food chain.</em></div> 
+ 		  	  	<body> <div id="box0"><em>Drag and drop the pictures in the correct order (from left to right) to show how energy moves through a food chain.</em></div> 
  		  	  		<div id="box1" ondragover="event.preventDefault()" ondrop="dropWord(event)" > 
  		  	  		<div class="mover" id="boxA" draggable="true" ondragstart="dragWord(event)" ></div> 
  		  	  		</div>
